--- a/helm_chart/values.yaml
+++ b/helm_chart/values.yaml
@@ -36,3 +36,9 @@ zipkin:
       memory: 300Mi
   enabled: false
   url: zipkin.zipkin.svc.cluster.local
+
+hpa:
+  minReplicas: 1
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 80
+  targetMemoryUtilizationPercentage: 70
